# psoSpotter-py

./: LICENSE  README.md  pyproject.toml
src/psospotter/: __init__.py  config.py  metadata.py  metrics.py  model.py  ortholog.py  pipeline.py  preprocess.py  selection.py  simulate.py  splits.py
src/psospotter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: _reference.py  conftest.py  test_integration.py  test_metadata.py  test_metrics.py  test_model.py  test_ortholog.py  test_pipeline.py  test_preprocess.py  test_selection.py  test_splits.py
